@@ -21,16 +21,15 @@ public class FlowParser {
     public Set<Prediction> flowsParsing(String flows) {
         if (flows == null || flows.isEmpty()) return new HashSet<>();
         List<String> listOfFlow = Arrays.asList(flows.split(";"));
-        return listOfFlow.stream().map( flow -> getPredictionByFlowString(flow)).collect(Collectors.toSet());
+        return listOfFlow.stream().map(this::getPredictionByFlowString).collect(Collectors.toSet());
     }
 
     private Prediction getPredictionByFlowString(String flow) {
         String[] flowSplitted = flow.split("->");
-        List<String> sources = Arrays.asList(flowSplitted[0].split(",")).stream().collect(Collectors.toList());
+        List<String> sources = Arrays.stream(flowSplitted[0].split(",")).toList();
         Method target = mapCrudMethods.get(flowSplitted[1]);
         String source = sources.stream().findFirst().orElse("");
         return Prediction.builder().source(source).target(target).build();
     }
-
 
 }
